# avatar

./: CMakeLists.txt  control_avatar.cpp  dracoHeadCode.ino  get_features.cpp  get_landmarks.cpp  package.xml
cmake/Modules/: Findcatkin.cmake  Finddlib.cmake
dracoHeadCode/: dracoHeadCode.ino
src/: CvImage.cpp  CvImage.h  image_converter.cpp  image_converter.h  landmark_detector.cpp  landmark_detector.h
